[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weak-supervision-labeling"
version = "0.1.0"
description = "Weak supervision for latent clustering with GMVAE"
authors = [
    { name = "Ton Nom" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "tensorboardX",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["src"]